--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ hr{
   height: auto;
   border-radius: 5px;
   border: 1px solid #000000;
-  padding: 8px 8px 8px 32px;
+  padding: 8px 15px 8px 15px;
 }
 
 .dodatek{
@@ -76,5 +76,6 @@ hr{
 
 img{
   height: auto;
-  width: auto;
+  width: 100%;
+  display: block;
 }
