--- a/style/style.css
+++ b/style/style.css
@@ -74,8 +74,9 @@ hr{
   color:#1d1d1d;
 }
 
-img{
+.paper img{
   height: auto;
-  width: 100%;
+  width: auto;
+  max-width: 100%;
   display: block;
 }
