--- a/style/style.css
+++ b/style/style.css
@@ -74,9 +74,10 @@ hr{
   color:#1d1d1d;
 }
 
-.paper img{
-  height: auto;
-  width: auto;
+img{
   max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
   display: block;
 }
