--- a/style/style.css
+++ b/style/style.css
@@ -1,53 +1,53 @@
 body {
-    font-family: "Lato", sans-serif;
-    background-color:  #EAE4D5;
-  }
+  font-family: "Lato", sans-serif;
+  background-color:  #EAE4D5;
+}
   
-  .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #B6B09F;
-    overflow-x: hidden;
-    transition: 0.2s;
-    padding-top: 60px;
-    border-right: 1px solid #000000;
-  }
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #B6B09F;
+  overflow-x: hidden;
+  transition: 0.2s;
+  padding-top: 60px;
+  border-right: 1px solid #000000;
+}
   
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #000000;
-    display: block;
-    transition: 0.2s;
-  }
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #000000;
+  display: block;
+  transition: 0.2s;
+}
   
-  .sidenav a:hover {
-    color: #F2F2F2;
-  }
+.sidenav a:hover {
+  color: #F2F2F2;
+}
 
   
 #main {
-    transition: margin-left .2s;
-    padding: 16px;
+  transition: margin-left .2s;
+  padding: 16px;
   }
   
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
   
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 
 h1{
   text-align: center;
@@ -72,6 +72,9 @@ hr{
 .dodatek{
   font-style: italic;
   color:#1d1d1d;
+}
+.zvyraznit{
+  font-weight: bold;
 }
 
 img{
