--- a/style/style.css
+++ b/style/style.css
@@ -124,3 +124,25 @@ tr td{
   font-weight: bold;
   font-style: italic;
 }
+
+.about-me {
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+}
+
+.profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 110%;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border: 3px solid #ccc;
+}
+
+.motto {
+    font-style: italic;
+    color: #7c7c7c;
+    margin: 20px 0;
+}
